force-app/main/default/objects/Animal_Status__c/Animal_Status__c.object-meta.xml
<CustomObject>
    <label>Animal Status</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Status #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>