force-app/main/default/objects/Animal_Status__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Forfeited</fullName>
            </value>
            <value>
                <fullName>Forfeiture Pending</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>RTA</fullName>
            </value>
            <value>
                <fullName>RTO</fullName>
            </value>
            <value>
                <fullName>Seized</fullName>
            </value>
            <value>
                <fullName>Surrendered</fullName>
            </value>
            <value>
                <fullName>Waived Ownership</fullName>
            </value>
            <value>
                <fullName>Never Received Animal</fullName>
            </value>
            <value>
                <fullName>Legally Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>